bk_ida/gccida/g0/if_then_else_cond
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7651:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v7; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7655:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v11; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7667:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+68h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7668:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+6Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7691:51: error: use of undeclared identifier 'machine_mode'
*ptrue = simplify_gen_unary( code, mode, true0, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7692:53: error: use of undeclared identifier 'machine_mode'
*pfalse = simplify_gen_unary( code, mode, false0, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7703:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
*ptrue = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7705:39: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( *( _WORD *)cond0 == 102 && ( rtx)cond0[1] == const_int_rtx[64] ) 
                                      ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7707:39: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( *( _WORD *)cond0 != 103 || ( rtx)cond0[1] != const_int_rtx[64] ) 
                                      ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7710:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
*pfalse = ( rtx)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7721:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7726:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7803:29: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
|| ( v7 = swap_condition( ( rtx_code)*( _WORD *)cond0), v7 == combine_reversed_comparison_code( cond1)) 
                            ^~~~~~~~
                            rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7803:38: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
|| ( v7 = swap_condition( ( rtx_code)*( _WORD *)cond0), v7 == combine_reversed_comparison_code( cond1)) 
                          ~~~~~~~~~~~^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7830:30: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
|| ( v11 = swap_condition( ( rtx_code)*( _WORD *)cond0), v11 == combine_reversed_comparison_code( cond1)) 
                             ^~~~~~~~
                             rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/combine.c:7830:39: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
|| ( v11 = swap_condition( ( rtx_code)*( _WORD *)cond0), v11 == combine_reversed_comparison_code( cond1)) 
                           ~~~~~~~~~~~^~~~~~~~~~~~~~~~
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/if_then_else_cond/src/obj/combine.o] Error 1
